# polymarket-quant-trading-system

./: .env.example  .gitignore  DISCORD_COMMANDS.md  Makefile  README.md  operations_handoff_draft.md  operations_handoff_draft_2026-03-20.md  operations_handoff_draft_2026-04-17.md  operations_handoff_template.md  polyclaw_inspired_minimal_plan.md  preprod_operations_playbook.md  preprod_readiness_checklist.md  preprod_readiness_snapshot_2026-03-20.md  production_release_record_draft.md  production_release_record_draft_2026-03-20.md  production_release_record_draft_2026-04-17.md  production_release_record_template.md  production_signoff_draft.md  production_signoff_draft_2026-03-20.md  production_signoff_draft_2026-04-17.md  production_signoff_template.md  pyproject.toml  smart_wallet_scoring_plan.md
docs/: demo_core_freeze_v1.md
frontend/: app.js  i18n.js  index.html  styles.css
migrations/: 001_init_runtime_tables.sql  002_order_intent_idempotency.sql  009_exposure_ledger.sql
prompts/: codex_master_prompt.md  retry_template.md  task_template.md
scripts/: ai.codex.poly.10h-thread-bridge.plist  ai.codex.poly.session-bridge.plist  blockbeats_http_fetch.py  blockbeats_query.sh  bridge_10h_thread_report.py  bridge_codex_session_reports_to_discord.py  check_env.py  codex_session_bridge_status.sh  fault_drill.py  full_flow_validate.py  generate_reconciliation_report.py  git_autosync.py  git_autosync_status.sh  install_10h_thread_bridge_launchd.sh  install_codex_session_bridge_launchd.sh  install_desktop_poly_command.sh  install_git_autosync_launchd.sh  replay_runtime.py  (+60 more)
(+202 files in other folders)
