[project]
name = "polymarket-auto-trader"
version = "0.1.0"
description = "Automated Polymarket trading bot (wallet-following strategy)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "tenacity>=8.2.3",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
live = [
  "py-clob-client>=0.20.0",
  "websocket-client>=1.8.0"
]

[project.scripts]
polybot = "polymarket_bot.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
